--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App - Tesla config</title>
-
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  />
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
